<resources>
    <string name="app_name">易霸电骑</string>
    <string name="place">车辆站点</string>
    <string name="placeDesc">车辆停放在各个站点内，点击地图中的绿色车辆站点图标，即可为您规划接车/换车的站点路线</string>
    <string name="howjie">如何借车</string>
    <string name="howjieDesc">点击我要借车进入扫码页面，扫描车身二维码或输入车辆编码，车辆即可开锁即可使用电动车</string>
    <string name="lock">临时锁车</string>
    <string name="lockDesc">您可以在使用过程中临时锁车离开，并在返回时解除锁定，临时锁车期间其他人无法使用该车辆</string>
    <string name="back">正确还车</string>
    <string name="backDesc">请将车辆整齐停放在路边白线内，点击我要还车，确认站点位置后即可还车</string>
    <string name="aggreement">点击确定，即代表您已同意 &#060;&#060;用车服务条款&#062;&#062;</string>
    <string name="phoneverification">手机验证</string>
    <string name="depositrecharge">押金充值</string>
    <string name="certification">实名认证</string>
    <string name="startborrow">开始借车</string>
    <string name="my_account">我的账户</string>
    <string name="my_trip">我的行程</string>
    <string name="my_news">我的消息</string>
    <string name="my_lease">我的租赁</string>
    <string name="my_invite">邀请好友</string>
    <string name="user_guide">用户指南</string>
    <string name="user_center">个人中心</string>
    <string name="contact_us">联系客服</string>
    <string name="min_amount">￥299.0</string>
    <string name="zhifubao_pay">支付宝支付</string>
    <string name="wx_pay">微信支付</string>
    <string name="free_refund">租车押金支持随时退款</string>
    <string name="benefit">首次充值可获得10元租车福利</string>
    <string name="is_deposit">is_deposit</string>
    <string name="name">姓名</string>
    <string name="input_name">请输入您的真实姓名</string>
    <string name="input_identity">请输入正确的身份证号码</string>
    <string name="is_identity">is_identity</string>
    <string name="fare_balance">账户余额(元)</string>
    <string name="deposit_amount">押金 299元</string>
    <string name="deposit_refund">押金退款</string>
    <string name="recharge">充值</string>
    <string name="recharge_desc">疯狂充值季,150元以上充多少送多少!</string>
    <string name="recharge_custom">按需输入充值金额，最低一元</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="confim">确定</string>
    <string name="cancel">取消</string>
    <string name="input_right_info">*请务必填写正确的真实信息</string>
    <string name="input_zfb_account">请输入支付宝账号</string>
    <string name="choose_return_reason">选择退款原因</string>
    <string name="refund_desc">申请提交成功后，租车押金将在3-7个工作日内退还至您的账户,请注意查看账户资金动态</string>
    <string name="input_bank_name">请输入银行名称</string>
    <string name="input_brance_name">请输入支行名称</string>
    <string name="input_bank_card">请输入银行卡号</string>
    <string name="lock_bike_reminder">最多为您锁车半小时哦，超过时间将会自动锁上还车哦</string>
    <string name="return_bike_reminder">亲爱的用户，人和车必须在同一地点才能还车哦</string>
    <string name="return_bike_reminder2">亲爱的用户，您未在指定站点内还车，如果强行还车您的信用分将会减少哦</string>
    <string name="unlock_use">1.我要开锁用车</string>
    <string name="unlock_use_desc">我是介绍文案我是介绍文案我是介绍文案我是介绍文案我是介绍文案我是介绍文案我是介绍文案我是介绍文案我是介绍文案我是介绍文案</string>
    <string name="lease_mobile_power">2.我要租赁充电宝</string>
    <string name="lease_mobile_power_desc">我是介绍文案我是介绍文案我是介绍文案我是介绍文案我是介绍文案我是介绍文案我是介绍文案我是介绍文案我是介绍文案我是介绍文案</string>
    <string name="replace_battery">3.我要更换电池赚外快</string>
    <string name="replace_battery_desc">我是介绍文案我是介绍文案我是介绍文案我是介绍文案我是介绍文案我是介绍文案我是介绍文案我是介绍文案我是介绍文案我是介绍文案</string>
    <string name="cdb_desc">全球共享时代开启，你还在等什么呢，赶快加入我们吧</string>
    <string name="ebike_battery_desc">如果你想赚外快，那么你找对了，付出总会有回报</string>
    <string name="other_service">更多服务敬请期待</string>
    <string name="integral_desc">骑行，让世界充满绿色能量...</string>
    <string name="choose_problem_type">选择车辆问题类型。</string>
    <string name="add_image">为了更好地验证信息，麻烦提供车辆照片</string>
    <string name="problem_desc">请提供车辆信息和问题描述</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
