<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.wanle.lequan.sharedbicycle.activity.MyAccountActivity">

    <include layout="@layout/layout_navgiation"/>

    <ImageView
        android:id="@+id/iv_wallet"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/wallet_package"/>

    <TextView
        android:id="@+id/tv_fare_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_wallet"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="52.5"
        android:textColor="@color/black"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_fare_balance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/fare_balance"
        android:textSize="12sp"/>

    <LinearLayout
        android:id="@+id/linear_deposit_refund"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deposit_amount"

            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/tv_deposit_refund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="8dp"
            android:text="@string/deposit_refund"
            android:textColor="@color/red"
            android:textSize="15sp"
            />
    </LinearLayout>


    <Button
        android:id="@+id/btn_recharge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="45dp"
        android:background="@color/red"
        android:text="@string/recharge"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
</RelativeLayout>
