<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="120dp"
              android:layout_marginBottom="9dp"
              android:background="@color/white"
              android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_phone_verification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:drawablePadding="5dp"
        android:drawableTop="@drawable/complete_verify"
        android:gravity="center"
        android:text="@string/phoneverification"
        android:textColor="@color/red"
        android:textSize="11sp"
        />

    <TextView
        android:id="@+id/line_depositrecharge"
        android:layout_width="0dp"
        android:layout_height="1.4dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:background="@color/green3"/>

    <TextView
        android:id="@+id/tv_deposit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:drawablePadding="5dp"
        android:drawableTop="@drawable/dispote_verify"
        android:gravity="center"
        android:text="@string/depositrecharge"
        android:textColor="@color/black"
        android:textSize="11sp"/>

    <TextView
        android:id="@+id/line_certification"
        android:layout_width="0dp"
        android:layout_height="1.4dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/identity_verity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:drawablePadding="5dp"
        android:drawableTop="@drawable/identify_verify"
        android:gravity="center"
        android:text="@string/certification"
        android:textColor="@color/black"
        android:textSize="11sp"/>

    <TextView
        android:id="@+id/line_startborrow"
        android:layout_width="0dp"
        android:layout_height="1.4dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/tv_start_borrow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:drawablePadding="5dp"
        android:drawableTop="@drawable/bike_verify"
        android:gravity="center"
        android:text="@string/startborrow"
        android:textColor="@color/black"
        android:textSize="11sp"/>

</LinearLayout>