<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_deposit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white2"
    android:orientation="vertical"
    tools:context="com.wanle.lequan.sharedbicycle.activity.DepositActivity">
<include  layout="@layout/layout_navigation_bar"/>
<include layout="@layout/layout_borrow_progress"/>
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/depositrecharge"
           android:textSize="25sp"
           android:textColor="@color/black"
           android:layout_marginLeft="10dp"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/min_amount"
           android:textSize="25sp"
           android:layout_alignParentRight="true"
           android:textColor="@color/black"
           android:layout_marginRight="10dp"/>
   </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        >
        <ImageView
            android:id="@+id/iv_zhifubao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/zfbpay"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zhifubao_pay"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="5dp"
            android:textSize="18sp"
            android:layout_toRightOf="@id/iv_zhifubao"
            />

        <ImageView
            android:id="@+id/iv_wx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wxpay"
            android:layout_marginTop="20dp"
            android:layout_below="@id/iv_zhifubao"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wx_pay"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:textSize="18sp"
            android:layout_below="@id/iv_zhifubao"
            android:layout_toRightOf="@id/iv_zhifubao"
            />

        <RadioGroup
            android:id="@+id/rgb_way_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">
            <RadioButton
                android:id="@+id/rb_zfb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:background="@drawable/rb_pay_select"/>
            <RadioButton
                android:id="@+id/rb_wx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/rb_pay_select"
                />
        </RadioGroup>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/toolbar"
        android:layout_marginTop="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free_refund"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="10dp"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/benefit"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="10dp"
        android:textSize="16sp"/>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/btn_confim"
        android:background="@color/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="立即充值"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        />
</RelativeLayout>

</LinearLayout>
