<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_balance_recharge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white2"
    android:orientation="vertical"
    tools:context="com.wanle.lequan.sharedbicycle.activity.BalanceRechargeActivity">

    <include layout="@layout/layout_navigation_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:text="余额充值"
            android:textColor="@color/black"
            android:textSize="28sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/recharge_desc"
            android:textSize="15sp"
            android:layout_marginBottom="8dp"
            />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rec_recharge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
    </android.support.v7.widget.RecyclerView>
<EditText
    android:id="@+id/edit_amount"
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:digits="1234567890"
    android:layout_marginLeft="8dp"
    android:hint="@string/recharge_custom"
    android:textColorHint="@color/tougrey"
    android:textCursorDrawable="@null"
    android:layout_marginRight="8dp"
    android:background="@drawable/line_et_identify_bg"
    />
    <RelativeLayout
        android:id="@+id/rel_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:background="@color/white"
        >
        <ImageView
            android:id="@+id/iv_zhifubao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/zfbpay"
            android:layout_marginTop="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zhifubao_pay"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="5dp"
            android:textSize="18sp"
            android:layout_toRightOf="@id/iv_zhifubao"
            />

        <ImageView
            android:id="@+id/iv_wx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wxpay"
            android:layout_marginTop="20dp"
            android:layout_below="@id/iv_zhifubao"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wx_pay"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/iv_zhifubao"
            android:layout_toRightOf="@id/iv_zhifubao"
            />

        <RadioGroup
            android:id="@+id/rgb_way_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">
            <RadioButton
                android:id="@+id/rb_zfb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:background="@drawable/rb_pay_select"/>
            <RadioButton
                android:id="@+id/rb_wx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/rb_pay_select"
                />
        </RadioGroup>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btn_confim"
            android:background="@color/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="立即充值"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:layout_marginBottom="25dp"
            />
    </RelativeLayout>
</LinearLayout>
